feat: eliminate popup if only one config available